# esp32s3-waveshare-touch-lcd-7

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/declarative_ui/: CMakeLists.txt  README.md  declarative_ui.hpp
components/declarative_ui/Navigation/: navigation_link.cpp  navigation_link.hpp  navigation_stack.cpp  navigation_stack.hpp  title.cpp  title.hpp  tool_bar.cpp  tool_bar.hpp
components/declarative_ui/core/: array.hpp  color.hpp  string.hpp  ui.cpp  view.cpp  view.hpp  view_internal.hpp
components/declarative_ui/examples/: README.md  examples.hpp
components/declarative_ui/examples/binding/: examples.cpp  examples.hpp
components/declarative_ui/examples/bluetooth_keyboard/: bluetooth_keyboard_service.cpp  bluetooth_keyboard_service.hpp  bluetooth_keyboard_view.cpp  bluetooth_keyboard_view_model.cpp  bluetooth_keyboard_view_model.hpp  examples.hpp
components/declarative_ui/examples/compose/: compose_components.cpp  compose_components.hpp  compose_view.cpp  compose_view_model.cpp  compose_view_model.hpp  examples.hpp
components/declarative_ui/examples/for_each/: examples.cpp  examples.hpp
components/declarative_ui/examples/gadgets/: examples.hpp  gadgets_view.cpp  gadgets_view_model.cpp  gadgets_view_model.hpp
components/declarative_ui/examples/list/: examples.cpp  examples.hpp
components/declarative_ui/examples/navigation/: examples.hpp  navigation_view.cpp  navigation_view_model.hpp
components/declarative_ui/examples/shared/: example_layout.hpp
components/declarative_ui/examples/showcase/: examples.hpp  logo_lvgl.cpp  logo_lvgl.hpp  showcase_view.cpp  showcase_view_models.cpp  showcase_view_models.hpp
components/declarative_ui/examples/state/: examples.cpp  examples.hpp
components/declarative_ui/examples/state_object/: dashboard_view.cpp  dashboard_view_model.cpp  dashboard_view_model.hpp  device_view.cpp  device_view_model.cpp  device_view_model.hpp  examples.hpp
components/declarative_ui/layout/: for_each.hpp  scroll_view.cpp  scroll_view.hpp  stack.cpp  stack.hpp
components/declarative_ui/platform/: platform.cpp  platform.hpp
components/declarative_ui/reactive/: binding.hpp  list_state.hpp  observable_object.hpp  published.hpp  published_list.hpp  publisher.hpp  scheduler.hpp  state.hpp  state_object.hpp  subscription.hpp  transaction.hpp
components/declarative_ui/views/: button.cpp  button.hpp  controls.cpp  controls.hpp  image.cpp  image.hpp  loading.cpp  loading.hpp  shape.cpp  shape.hpp  text.cpp  text.hpp  text_field.cpp  text_field.hpp
components/dependences/: CMakeLists.txt  lvgl_port.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/: CMakeLists.txt  main.cpp  waveshare_rgb_lcd_port.h
main/api/: zelda_view.cpp  zelda_view.hpp  zelda_view_model.cpp  zelda_view_model.hpp
